# graviti-capstone

./: .gitignore
GUnitTest/: GUnitTest.vcxproj  GUnitTest.vcxproj.filters  test.cpp
GUnitTest/test/Simulation/: Sources.cpp  T_Entity.cpp  T_PhysicalState.cpp
PositionCalculator/: PositionCalculator.sln  calculatePositions.sln  gitignore.txt
PositionCalculator/PositionCalculator/: PositionCalculator.cpp  PositionCalculator.vcxproj  PositionCalculator.vcxproj.filters  csvHandler.cpp  example.csv
PositionCalculator/PositionCalculator/x64/Debug/: PositionCalculator.exe.recipe  PositionCalculator.ilk  positioncalculator.obj.enc  vc143.idb
PositionCalculator/PositionCalculator/x64/Debug/Position.4099f459.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PositionCalculator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
PositionCalculator/calculatePositions/: calculatePositions.cpp  calculatePositions.vcxproj  calculatePositions.vcxproj.filters  earth.csv  moon.csv  sun.csv
QtGraviti/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  QtGraviti.sln  QtGraviti.vcxproj  QtGraviti.vcxproj.filters  main.cpp  main.qml  qml.qrc
QtGraviti/content/images/: sources.txt
QtGraviti/include/EntityJsons/: GeostationaryOrbit.json  ISS.json  LEO.json  SpaceShuttleHubble.json  earth (2).json  earth(2).json  earth.json  earth_blank.json  localEarthAU.json  test1.json
QtGraviti/include/GravitiLib/: BatchSimEnvironment.h  Entity.h  EntityManager.h  IPhysicsEngine.h  NBodyEngine.h  OptimizationEntityManager.h  PhysicalState.h  RealTimeSimEnvironment.h
QtGraviti/include/entityJsons/: Earth.json
QtGraviti/src/: BatchSimEnvironment.cpp  Entity.cpp  EntityManager.cpp  Foo.cpp  main.cpp
QtGraviti/src/App/: TrajectoryRenderer.cpp  TrajectoryRenderer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtGraviti/src/App/controllers/: EntityListController.cpp  EntityListController.h  OptimizationController.cpp  OptimizationController.h  SimulationControl.cpp  SimulationControl.h
QtGraviti/src/App/qml/: BaseInterface.ui.qml  SimulationView.qml  main.qml
QtGraviti/src/Simulation/: BatchSimEnvironment.cpp  BatchSimEnvironment.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  IPhysicsEngine.h  NBodyEngine.cpp  NBodyEngine.h  OptimizationEntityManager.cpp  PhysicalState.cpp  PhysicalState.h  RealTimeSimEnvironment.cpp
QtGraviti/tests/: Sources.cpp  T_BatchSimEnvironment.cpp  T_Entity.cpp  T_EntityManager.cpp  T_NBodyEngine.cpp  T_OptimizationController.cpp  T_OptimizationEntityManager.cpp  T_PhysicalState.cpp  T_RealTimeSimEnviornment.cpp  T_SimulationController.cpp  T_TrajectoryRenderer.cpp  pch.h
QtGraviti/tests/gTest/: T_BatchSimEnvironment.cpp  T_Entity.cpp  T_EntityManager.cpp  T_NBodyEngine.cpp
